--- a/media-queries.css
+++ b/media-queries.css
@@ -1,136 +1,288 @@
 /* Schermo grande -> 3 colonne */
-  @media (min-width: 1147px) {
-    .contacts-wrapper-small{
-        display: none;
-    }
-
-    .nav-bar{
-        display: none;
-    }
-
-    #nav-bar-3,
-    #footer-col1{
-        display: none;
-    }
-
-    .hor-line,
-    .phone-footer{
-      display: none;
-    }
+@media (min-width: 1147px) {
+  .contacts-wrapper-small {
+    display: none;
   }
 
-  /* Schermi medi: massimo 1000px -> 2 colonne */
+  .nav-bar {
+    display: none;
+  }
+
+  #nav-bar-3,
+  #footer-col1 {
+    display: none;
+  }
+
+  .hor-line,
+  .phone-footer {
+    display: none;
+  }
+
+  .phone-nav-bar {
+    display: none;
+  }
+}
+
+/* Schermi medi: massimo 1000px -> 2 colonne */
 @media (max-width: 1146px) {
+
+
+  .slash {
+    display: inline-block;
+  }
+
+
   .column,
   .column2 {
-      width: 50vw;
+    width: 50vw;
   }
 
-  .nav-bar{
+  .toggle {
+    display: inline-block;
+    width: initial
+  }
+
+  .toggle:first-child {
+    display: inline-block;
+    width: 50vw
+  }
+
+  /* Column visibility control */
+  #show-col-1:checked~.layout #col-1,
+  #show-col-1:checked~.layout #col-2 {
+    display: block;
+  }
+
+  #show-col-1:checked~.layout #col-3 {
+    display: none;
+  }
+
+  #show-col-2:checked~.layout #col-2,
+  #show-col-2:checked~.layout #col-1 {
+    display: block;
+  }
+
+  #show-col-2:checked~.layout #col-3 {
+    display: none;
+  }
+
+  #show-col-2:checked~.layout .navigation #title-2 {
+    text-decoration: underline;
+  }
+
+  #show-col-3:checked~.layout #col-3,
+  #show-col-3:checked~.layout #col-1 {
+    display: block;
+  }
+
+  #show-col-3:checked~.layout #col-2 {
+    display: none;
+  }
+
+  #show-col-3:checked~.layout .navigation #title-3 {
+    text-decoration: underline;
+  }
+
+
+  .nav-bar {
     display: flex;
     gap: 10px;
   }
 
-  #LATEST-3col,
-  #OTHER-PROJECTS-3col,
-  #footer-col1{
+  .phone-nav-bar {
     display: none;
   }
 
-  #LATEST-2col:hover{
-    cursor: pointer;
-    font-weight: 500;
-    width: 56px;
+  #LATEST-3col,
+  #OTHER-PROJECTS-3col,
+  #footer-col1 {
+    display: none;
   }
 
-  #OTHER-PROJECTS-2col:hover{
+  #LATEST-2col:hover {
     cursor: pointer;
     font-weight: 500;
   }
-  
-  #col-3{
+
+  #OTHER-PROJECTS-2col:hover {
+    cursor: pointer;
+    font-weight: 500;
+  }
+
+  #col-3 {
     display: none;
     width: 50vw;
   }
 
   .line-1 {
-  left: 50vw !important;
+    left: 50vw !important;
   }
+
   .line-2 {
-      display: none;
+    display: none;
   }
 
   .line-3 {
-  right: 0;
-  display: block;
+    right: 0;
+    display: block;
   }
 
   .hor-line,
-  .phone-footer{
-      display: none;
-    }
-
-  .contacts-wrapper-small{
+  .phone-footer {
     display: none;
   }
+
+  .contacts-wrapper-small {
+    display: none;
+  }
+
+  .column-title:hover {
+    font-weight: 400;
+    cursor: pointer;
+  }
+
 }
 
 /* Schermi piccoli: massimo 765px -> 1 colonna */
-@media (max-width: 800px) {
-    #col-1,
-    #col-2,
-    #col-3 {
-        width: 100vw;
-        display: inline-block !important;
-    }
+@media (max-width: 765px) {
 
-    .line-1, .line-2,
-    .contacts-wrapper,
-    .footer{
-        display: none;
-    }
+  .toggle {
+    width: initial
+  }
 
-    .hor-line{
-      display: block;
-    }
+  .toggle:first-child {
+    width: initial
+  }
 
-    #Porfolio{
-        display: none;
-    }
+  #col-1,
+  #col-2,
+  #col-3 {
+    width: 100vw;
+  }
 
-    .contacts-wrapper-small{
-    display: inline !important;
-    margin-bottom: 50px;
-    }
+  .layout {
+    width: 100vw;
+  }
 
-  .nav-bar{
+  .column-title,
+  .page-title:hover {
+    cursor: pointer;
+  }
+
+  .navigation {
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .space-between{
+    display: flex !important;
+    flex: 2;
+  }
+
+  .space-right{
+    width: 40px;
+  }
+
+  .column-title:hover {
+    font-weight: 400;
+  }
+
+  .phone-nav-bar {
+    display: flex;
+  }
+
+  .CD-Blurb {
+    font-size: 14pt;
+    line-height: 1.15;
+  }
+
+  .line-1,
+  .line-2,
+  .contacts-wrapper,
+  .footer {
     display: none;
   }
 
-   #LATEST-3col,
+  .hor-line {
+    display: block;
+  }
+
+  #Porfolio {
+    display: none;
+  }
+
+  .contacts-wrapper-small {
+    display: inline !important;
+    margin-bottom: 50px;
+  }
+
+  .nav-bar {
+    display: none;
+  }
+
+  #LATEST-3col,
   #OTHER-PROJECTS-3col {
     display: block;
   }
 
-  .caption-wrapper{
+  .caption-wrapper {
     height: 450px;
   }
 
-  .caption{
+  .caption {
     margin-right: 20px;
+    font-size: 15pt;
+    line-height: 1.15;
   }
 
-  .footer3{
+  .footer3 {
     display: none !important;
   }
 
-  .phone-footer{
+  .phone-footer {
     display: flex !important;
   }
 
-  .column-title{
-    margin-top: 40px;
+  .column-title {
+    text-transform: uppercase;
   }
 
 
+  /* Column visibility control */
+  #show-col-1:checked~.layout #col-1 {
+    display: block;
+  }
+
+  #show-col-1:checked~.layout #col-2,
+  #show-col-1:checked~.layout #col-3 {
+    display: none;
+  }
+
+  #show-col-2:checked~.layout #col-2 {
+    display: block;
+  }
+
+  #show-col-2:checked~.layout #col-1,
+  #show-col-2:checked~.layout #col-3 {
+    display: none;
+  }
+
+  #show-col-3:checked~.layout #col-3 {
+    display: block;
+  }
+
+  #show-col-3:checked~.layout #col-1,
+  #show-col-3:checked~.layout #col-2 {
+    display: none;
+  }
+
+}
+
+@media (max-width: 550px) {
+
+  .project-frame,
+  .project-frame-B {
+    height: 250px;
+  }
 }
