--- a/style.css
+++ b/style.css
@@ -1,20 +1,32 @@
-body{
-    margin: 0;
-    display: flex;
-    overflow-x: hidden;
-    cursor: default;
-    flex-wrap: wrap;
+:root {
+  --textColor: red;
+  --textSize: 16px;
+  --space: 20px;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  overflow-x: hidden;
+  cursor: default;
+  flex-wrap: wrap;
+  color: var(--textColor);
+  border-color: var(--textColor);
 }
 
 /*Columns and lines*/
 .column,
 .column2,
-.column3{
-    width: 33.333vw;
-    display: inline-block;
+.column3 {
+  width: 33.333vw;
+  float: left;
 }
 
-.column3{
+#title-3{
+  width: 141px;
+}
+
+.column3 {
   user-select: none;
 }
 
@@ -23,59 +35,68 @@ body{
   top: 0;
   bottom: 0;
   width: 3px;
-  background-color: red;
+  background-color: var(--textColor);
   z-index: 10;
   pointer-events: none;
 }
 
 .line-1 {
-    left: 33.333vw;
+  left: 33.333vw;
 }
 
 .line-2 {
-    left: 66.666vw;
+  left: 66.666vw;
 }
 
 .line-3 {
-    right: 0;
+  right: 0;
 }
 
 /*Header elements*/
-.page-title{
-  font-family: 'Untitled';
-  font-weight: 500;
-  color: red;
-  height: 100px;
-  margin-left: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+.nav-bar-1 {
+  display: flex;
+  justify-content: space-between;
+  height: calc(var(--space) * 4);
+  margin: 20px;
+  margin-bottom: 0px;
 }
 
-.column-title{
+.phone-nav-bar {
+  margin-top: 0px;
+  display: flex;
+  gap: 5px;
+
+}
+
+.phone-nav-bar-elements {
   font-family: "adobe-jenson-pro", serif;
   font-weight: 700;
   font-style: normal;
-  color: red;
-  margin-left: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-right: 20px;
-  height: 10px;
-  display: inline-block;
+  margin: 0px;
 }
 
-.nav-item{
-  display: inline-block;
+.page-title {
+  font-family: 'Untitled';
+  font-weight: 500;
+  text-transform: uppercase;
 }
 
-.top-bar{
-  height: 140px;
+.column-title {
+  font-family: "adobe-jenson-pro", serif;
+  font-weight: 700;
+  font-style: normal;
+  text-transform: uppercase;
+}
+
+.top-bar {
+  height: 100px;
   position: relative;
 }
 
 .project-intro-bar {
   display: flex;
-  flex-wrap: nowrap; /* NO wrap tra frecce e testo */
+  flex-wrap: nowrap;
+  /* NO wrap tra frecce e testo */
   align-items: flex-end;
   position: absolute;
   bottom: 20px;
@@ -85,76 +106,81 @@ body{
 
 .project-intro-text {
   font-family: 'Untitled';
-  color: red;
   font-weight: 500;
   line-height: 1.2;
-  flex: 1 1 auto;        /* il testo può andare a capo */
-  min-width: 0;          /* per permettere il wrapping */
-  white-space: normal;   /* wrap consentito */
+  flex: 1 1 auto;
+  /* il testo può andare a capo */
+  min-width: 0;
+  /* per permettere il wrapping */
+  white-space: normal;
+  /* wrap consentito */
 }
 
 .gallery-arrows {
   display: flex;
-  flex-shrink: 0;        /* non si restringe */
-  margin-left: auto;     /* spinge a destra */
+  flex-shrink: 0;
+  /* non si restringe */
+  margin-left: auto;
+  /* spinge a destra */
   gap: 10px;
   margin-left: 50px;
 }
 
-.Call-to-action{
-font-family: 'Untitled';
-color: red;
-font-weight: 500;
-line-height: 1.2;
-position: absolute;
-left: 20px;
-bottom: 20px;
+.Call-to-action {
+  font-family: 'Untitled';
+  font-weight: 500;
+  line-height: 1.2;
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
 }
 
+
 /*Frames*/
-.project-frame{
+.project-frame {
   display: flex;
   justify-content: center;
   align-items: center;
   border-style: solid;
-  border-color: red;
   border-width: 3px;
   height: 300px;
   border-right: none;
+  border-left: none;
   margin-top: -3px;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.project-frame-B{
+.project-frame-B {
   border-style: solid;
-  border-color: red;
+
   border-width: 3px;
   height: 300px;
   width: 100%;
   border-right: none;
+  border-left: none;
   margin-top: -3px;
   object-fit: cover;
 }
 
 .project-image {
-max-height: 95%;
-max-width: 95%;
-object-fit: contain;
-display: block;
-margin: auto;
+  max-height: 95%;
+  max-width: 95%;
+  object-fit: contain;
+  display: block;
+  margin: auto;
 }
 
 .image-loop {
-width: 100%;
-height: 100%;
-overflow: hidden;
-position: relative;
-display: flex;
-justify-content: center;
-align-items: center;
-cursor: pointer;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .loop-image {
@@ -170,55 +196,63 @@ cursor: pointer;
 }
 
 /*COL 1 Elements*/
-.BIO{
-    font-family: "adobe-jenson-pro", serif;
-    font-weight: 400;
-    font-style: normal;
-    color: red;
-    font-size: 20pt;
-    margin-right: 40px;
-    margin-left: 20px;
-    height: 280px;
-    padding-top: 20px;
-    line-height: 1.1;
+.BIO {
+  font-family: "adobe-jenson-pro", serif;
+  font-weight: 400;
+  font-style: normal;
+
+  font-size: 20pt;
+  margin-right: 40px;
+  margin-left: 20px;
+  height: 280px;
+  padding-top: 20px;
+  line-height: 1.1;
 }
 
-.Alt-BIO{
+.Alt-BIO {
   font-family: 'Untitled';
   font-size: 14pt;
   font-weight: 500;
-  color: red;
   margin-left: 20px;
   padding-top: 20px;
 }
 
 .bio-wrapper {
-position: relative;
-height: 175px;
+  position: relative;
+  height: 175px;
 }
 
-#funny-bio{
-position: absolute;
-top: 0;
-left: 0;
-right: 0;
-font-family: 'Untitled', sans-serif;
-font-weight: 500;
-font-size: 14pt;
-color: red;
-margin: 20px;
-margin-right: 200px;
-margin-top: 10px;
-transition: all 0.3s ease;
+#funny-bio {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  font-family: 'Untitled', sans-serif;
+  font-weight: 500;
+  font-size: 14pt;
+  margin-right: 25%;
+  margin-left: 20px;
+  margin-top: 10px;
+  transition: all 0.3s ease;
 }
 
-.Contact{
+.Contact {
   font-family: 'Untitled';
   font-size: 12pt;
   font-weight: 400;
-  color: red;
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.Get-in-touch {
+  font-family: 'Untitled';
+  font-weight: 700;
+  font-style: normal;
+  font-size: 12pt;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-bottom: 2px;
+  margin-left: 60px;
 }
 
 .footer {
@@ -240,7 +274,6 @@ transition: all 0.3s ease;
   font-family: 'Untitled';
   font-size: 12pt;
   font-weight: 400;
-  color: red;
   padding-left: 20px;
   padding-top: 20px;
 }
@@ -264,14 +297,22 @@ transition: all 0.3s ease;
   margin: auto;
 }
 
-.CD-Blurb{
+.CD-Blurb {
   font-family: "adobe-jenson-pro", serif;
-  color: red;
   font-weight: 400;
   font-style: normal;
   font-size: 16pt;
   padding-top: 10px;
   height: 360px;
+}
+
+.CD-Title{
+  font-family: 'Untitled';
+  font-weight: 500;
+  font-size: 11pt;
+  line-height: 1;
+  height: 15px;
+  color: var(--textColor);
 }
 
 /*COL 3 Elements*/
@@ -280,46 +321,63 @@ transition: all 0.3s ease;
   font-weight: 400;
   font-style: normal;
   font-size: 16pt;
-  color: red;
-  padding: 20px;
-  padding-bottom: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-.caption-wrapper{
+.caption-wrapper {
   height: 440px;
+  padding-top: 10px;
+}
+
+.gallery-dots {
+  display: flex;
+  justify-content: right;
+  flex-direction: row;
+  direction: rtl;
+  gap: 30px;
+  margin-top: 20px;
+  margin-right: 40px;
+  height: 11px;
+}
+
+.gallery-dots .dot {
+  width: 4px;
+  height: 4px;
+  background-color: var(--textColor);
+  border-radius: 50%;
+  transition: all 0.2s ease;
+}
+
+.gallery-dots .dot.active {
+  width: 6px;
+  height: 6px;
+  background-color: var(--textColor);
 }
 
 /*MISC*/
 ::selection {
-background-color: black;
-color: white;
-text-shadow: none;
+  background-color: black;
+  color: white;
+  text-shadow: none;
 }
 
-.hor-line{
-  height: 3px;
-  background-color: red;
-  position: relative;
-  bottom: 0;
-}
-
-.footer{
+.footer {
   margin-top: 20px;
   padding-top: 20px;
 }
 
-.phone-footer{
+.phone-footer {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  height: 95px;
+  height: 80px;
   position: fixed;
   bottom: 0;
   background-color: white;
   width: 100%;
   border-top: 3px;
   border-style: solid;
-  border-color: red;
   padding-bottom: 10px;
 }
 
@@ -327,68 +385,70 @@ text-shadow: none;
   font-style: italic;
 }
 
-#Link {
-color: red;
-cursor: pointer;
+.Link {
+  cursor: pointer;
 }
 
-#Link:hover {
-font-weight: 200;
+.Link:hover {
+  font-weight: 200;
 }
 
-#Link:visited {
-color: red;
+.Link:visited {
+  color: var(--textColor)
 }
 
 ::-moz-selection {
-background-color: black;
-color: white;
+  background-color: black;
+  color: white;
 }
 
 ::-webkit-selection {
-background: black;
-color: white;
+  background: black;
+  color: white;
 }
 
 #arrow-left:hover,
-#arrow-right:hover{
+#arrow-right:hover {
   cursor: pointer;
 }
 
 /*Import Fonts*/
 @font-face {
-font-family:'Louize';
-src: url('Fonts/LouizeTrial-Regular.otf') format(opentype);
-font-weight: 400;
-font-style: normal;
+  font-family: 'Untitled';
+  src: url('Fonts/UntitledSans-Medium.otf') format(opentype);
+  font-weight: 500;
+  font-style: normal;
 }
+
 @font-face {
-font-family: 'Louize';
-src: url('Fonts/LouizeTrial-Bold.otf') format(opentype);
-font-weight: 700;
-font-style: normal;
+  font-family: 'Untitled';
+  src: url('Fonts/UntitledSans-MediumItalic.otf') format(opentype);
+  font-weight: 500;
+  font-style: italic;
 }
+
 @font-face {
-font-family: 'Louize';
-src: url('Fonts/LouizeTrial-Italic.otf') format(opentype);
-font-weight: 400;
-font-style: italic;
+  font-family: 'Untitled';
+  src: url('Fonts/UntitledSans-Regular.otf') format(opentype);
+  font-weight: 400;
+  font-style: normal;
 }
-@font-face {
-font-family: 'Untitled';
-src: url('Fonts/UntitledSans-Medium.otf') format(opentype);
-font-weight: 500;
-font-style: normal;
+
+/* --- RADIO TOGGLE CSS --- */
+
+input[type="radio"] {
+  display: none;
 }
-@font-face {
-font-family: 'Untitled';
-src: url('Fonts/UntitledSans-MediumItalic.otf') format(opentype);
-font-weight: 500;
-font-style: italic;
+
+.navigation{
+  width:100vw;
+  height: 20px;
+  margin:20px;
+  margin-bottom: 0px;
 }
-@font-face {
-font-family: 'Untitled';
-src: url('Fonts/UntitledSans-Regular.otf') format(opentype);
-font-weight: 400;
-font-style: normal;
-}
+
+.toggle {display: inline-block; width:33%}
+
+ .slash {
+    display: none;
+  }
