--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body {
   border-color: var(--textColor);
 }
 
+.layout{
+  display: flex;
+  flex-wrap: nowrap;
+}
+
 /*Columns and lines*/
 .column,
 .column2,
@@ -352,7 +357,7 @@ body {
   justify-content: right;
   flex-direction: row;
   direction: ltr;
-  gap: 30px;
+  gap: 36px;
   margin-top: 20px;
   margin-right: 40px;
   height: 11px;
