--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body {
   display: none !important;
 }
 
+.swiper-pagination-bullet{background-color: white !important; border: 1px solid var(--textColor); opacity: 1 !important;}
+.swiper-pagination-bullet-active{background-color: var(--textColor) !important;}
+
 .project-slide{
   width: 100%;
   height: calc(100vh - 229px) !important;
