--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     border-bottom: 3px solid var(--textColor);
   }
   img{width: 100%; height: 100%; object-fit: cover; cursor: pointer;}
+  video{width: 100%; height: 100%; object-fit: cover;}
 }
 
 /*Columns and lines*/
@@ -480,7 +481,7 @@ body {
   justify-content: space-between;
   align-items: flex-end;
   height: 70px;
-  position: fixed;
+  position: relative;
   bottom: 0;
   background-color: white;
   width: 100%;
